finish desktop design

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,4 +1,13 @@
 $bg-color: hsl(52, 94%, 94%);
 $black: hsl(221, 51%, 16%);
+$gray: hsl(100, 51%, 16%);
+$green: hsl(100, 53%, 39%);
 $white: hsl(0, 0%, 100%);
 $font-family: "Space Mono", monospace;
+$fs-h1: 40px;
+$fs-h3: 20px;
+$fs-body: 18px;
+$fs-large: 90px;
+$fw-normal: 400;
+$fw-bold: 700;
+$radius: 20px;
